backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vikesplace.com  # Replace with your actual domain
    http:
      paths:
      - path: /account
        pathType: Prefix
        backend:
          service:
            name: account-service
            port:
              number: 3200
      - path: /charity
        pathType: Prefix
        backend:
          service:
            name: charity-service
            port:
              number: 3200
      - path: /data-layer
        pathType: Prefix
        backend:
          service:
            name: data-layer-service
            port:
              number: 3200
      - path: /listing
        pathType: Prefix
        backend:
          service:
            name: listing-service
            port:
              number: 3200
      - path: /messages
        pathType: Prefix
        backend:
          service:
            name: messages-service
            port:
              number: 3200
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 3200
      - path: /ratings-reviews
        pathType: Prefix
        backend:
          service:
            name: ratings-reviews-service
            port:
              number: 3200
      - path: /recommendation
        pathType: Prefix
        backend:
          service:
            name: recommendation-service
            port:
              number: 3200
      - path: /search
        pathType: Prefix
        backend:
          service:
            name: search-service
            port:
              number: 3200
      - path: /users
        pathType: Prefix
        backend:
          service:
            name: users-service
            port:
              number: 3200
